feature: [chapter 4] : 할인 쿠폰 로직 적용 - test 복구